--- a/Server/Views/index.ejs
+++ b/Server/Views/index.ejs
@@ -18,7 +18,9 @@
 
   <!-- Main Content Section -->
   <main>
+  <div class="container">
     <%- include('content/' + page + '.ejs'); %>
+  </div>
   </main>
   
   <!-- Bottom Nav -->
