--- a/Server/Views/content/clothing-list.ejs
+++ b/Server/Views/content/clothing-list.ejs
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col">
-
+        <a href="/clothing-list/edit" id="addButton" class="btn btn-primary mb-1"><i class="fas fa-plus-circle"></i> Add Clothing</a>
         <table class="table table-striped table-bordered table-hover">
             <thead>
               <tr>
