--- a/Server/Views/content/edit.ejs
+++ b/Server/Views/content/edit.ejs
@@ -39,7 +39,12 @@
             name="price" value="<%= clothing.price %>" required>
         </div>
 
-        <button id="editButton" class="btn btn-primary"><i class="fas fa-edit fa-lg"></i> Edit</button>
+        <% if(title == "Edit") { %>
+            <button id="editButton" class="btn btn-primary"><i class="fas fa-edit fa-lg"></i> Edit</button>
+        <% } else { %>
+            <button id="addButton" class="btn btn-primary"><i class="fas fa-plus fa-lg"></i> Add</button>
+        <% } %>
 
+        <a href="/clothing-list" id="cancelButton" type="button" class="btn btn-warning"><i class="fas fa-undo fa-lg"></i> Cancel</a>
     </form>
 </div>
